# gmod-glua-ls

./: .actrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  flake.nix  test.rs  test_harness.py  typos.toml
crates/glua_check/: Cargo.toml  README.md
crates/glua_check/src/: cmd_args.rs  init.rs  lib.rs
crates/glua_check/src/output/: json_output_writer.rs  mod.rs  sarif_output_writer.rs  text_output_writer.rs
crates/glua_check/src/terminal_display/: display.rs
crates/glua_code_analysis/: Cargo.toml  README.md
crates/glua_code_analysis/resources/: schema.json
crates/glua_code_analysis/resources/std/: builtin.lua  debug.lua  global.lua  gmod_http.lua  os.lua  package.lua  table.lua  utf8.lua
crates/glua_code_analysis/src/: ast_util.rs  gamemode_base.rs  lib.rs
crates/glua_code_analysis/src/compilation/: mod.rs
crates/glua_code_analysis/src/compilation/analyzer/: call_site_params.rs  dynamic_field.rs  infer_cache_manager.rs  mod.rs  parallel.rs  setmetatable_factory.rs
crates/glua_code_analysis/src/compilation/test/: accessorfunc_test.rs  and_or_test.rs  annotation_test.rs  array_test.rs  assign_widening_scaling_test.rs  closure_param_infer_test.rs  decl_test.rs  dependency_test.rs  flow.rs  for_range_var_infer_test.rs  generic_infer_test.rs  generic_test.rs  gmod_network_test.rs  gmod_realm_hook_test.rs  gmod_scripted_class_test.rs  infer_str_tpl_test.rs  legacy_module_test.rs  member_infer_test.rs  metatable_test.rs  mod.rs  overload_test.rs  syntax_error_test.rs  unpack_test.rs
crates/glua_code_analysis/src/config/: mod.rs  pre_process.rs  test.rs
crates/glua_code_analysis/src/config/configs/: completion.rs  document_color.rs  gmod.rs  mod.rs  reformat.rs  runtime.rs  semantictoken.rs  strict.rs  workspace.rs
crates/glua_code_analysis/src/config/lua_loader/: mod.rs
crates/glua_code_analysis/src/db_index/: call_site_param.rs  mod.rs
crates/glua_code_analysis/src/db_index/accessor_func/: mod.rs
crates/glua_code_analysis/src/db_index/declaration/: decl.rs  decl_tree.rs  mod.rs
crates/glua_code_analysis/src/db_index/dependency/: mod.rs
crates/glua_code_analysis/src/db_index/dynamic_field/: mod.rs
crates/glua_code_analysis/src/db_index/flow/: flow_node.rs  flow_tree.rs  mod.rs  signature_cast.rs
crates/glua_code_analysis/src/db_index/global/: mod.rs
crates/glua_code_analysis/src/db_index/gmod_class/: mod.rs
crates/glua_code_analysis/src/db_index/gmod_infer/: mod.rs
crates/glua_code_analysis/src/db_index/gmod_load/: mod.rs
crates/glua_code_analysis/src/db_index/gmod_network/: mod.rs  pair.rs
crates/glua_code_analysis/src/db_index/member/: lua_member.rs  lua_member_item.rs  lua_owner_members.rs  mod.rs
crates/glua_code_analysis/src/db_index/metatable/: mod.rs
crates/glua_code_analysis/src/db_index/module/: legacy_module_env.rs  mod.rs  module_info.rs  test.rs
crates/glua_code_analysis/src/db_index/operators/: lua_operator.rs
crates/glua_code_analysis/src/db_index/property/: mod.rs  property.rs
crates/glua_code_analysis/src/db_index/reference/: mod.rs
crates/glua_code_analysis/src/db_index/schema/: mod.rs  schema_file.rs
crates/glua_code_analysis/src/db_index/signature/: gmod_domains.rs  mod.rs  signature.rs
crates/glua_code_analysis/src/diagnostic/: lua_diagnostic.rs  lua_diagnostic_code.rs  lua_diagnostic_config.rs  mod.rs
crates/glua_code_analysis/src/profile/: mod.rs
crates/glua_code_analysis/src/resources/: best_resource_path.rs  mod.rs
crates/glua_code_analysis/src/semantic/: guard.rs  mod.rs
crates/glua_code_analysis/src/test_lib/: mod.rs
crates/glua_code_analysis/src/vfs/: collect_workspace_files.rs  document.rs  loader.rs  mod.rs
crates/glua_diagnostic_macro/: Cargo.toml  README.md
crates/glua_doc_cli/: Cargo.toml  README.md
crates/glua_doc_cli/src/: cmd_args.rs  common.rs  init.rs
crates/glua_doc_cli/src/json_generator/: export.rs  json_types.rs  mod.rs
crates/glua_doc_cli/src/markdown_generator/: mod.rs  render.rs
crates/glua_ls/: Cargo.toml  README.md
crates/glua_ls/locales/tags/: en.yaml
crates/glua_ls/src/: cmd_args.rs  codestyle.rs  lib.rs
crates/glua_ls/src/context/: client.rs  debounced_analysis.rs  did_change_coalescer.rs  editor_display_cache.rs  file_diagnostic.rs  lsp_features.rs  mod.rs  snapshot.rs  status_bar.rs  workspace_manager.rs
crates/glua_ls/src/handlers/: gmod_string_context.rs  mod.rs  notification_handler.rs  request_handler.rs
crates/glua_ls/src/logger/: best_log_path.rs  mod.rs
crates/glua_ls/src/meta_text/: mod.rs
crates/glua_ls/src/server/: lsp_server.rs  main_loop.rs  message_processor.rs  mod.rs
crates/glua_ls/src/util/: desc.rs  long_running_watchdog.rs  mod.rs  module_name_convert.rs
crates/glua_ls/std_i18n/bit32/: zh_CN.yaml
crates/glua_ls/std_i18n/builtin/: zh_CN.yaml
crates/glua_ls/std_i18n/coroutine/: zh_CN.yaml
crates/glua_ls/std_i18n/debug/: zh_CN.yaml
crates/glua_ls/std_i18n/global/: meta.yaml  zh_CN.yaml
crates/glua_ls/std_i18n/io/: zh_CN.yaml
crates/glua_ls/std_i18n/math/: zh_CN.yaml
crates/glua_ls/std_i18n/os/: meta.yaml  zh_CN.yaml
crates/glua_ls/std_i18n/package/: zh_CN.yaml
crates/glua_ls/std_i18n/string/: zh_CN.yaml
crates/glua_ls/std_i18n/table/: zh_CN.yaml
crates/glua_ls/std_i18n/utf8/: meta.yaml  zh_CN.yaml
crates/glua_parser/: Cargo.toml  README.md
crates/glua_parser/src/: lib.rs
crates/glua_parser/src/kind/: lua_syntax_kind.rs  lua_token_kind.rs
crates/glua_parser/src/lexer/: lua_doc_lexer.rs  lua_lexer.rs
crates/glua_parser/src/parser/: lua_parser.rs
crates/glua_parser_desc/: Cargo.toml  README.md
crates/glua_parser_desc/src/: lib.rs  ref_target.rs  testlib.rs  util.rs
crates/glua_parser_desc/src/lang/: lua.rs  mod.rs
crates/glua_parser_desc/src/markdown/: mod.rs
crates/glua_parser_desc/src/markdown_rst/: mod.rs
crates/schema_to_glua/: Cargo.toml  README.md
crates/schema_to_glua/src/: converter.rs  lib.rs  lua_emitter.rs  main.rs  markdown_doc.rs  schema_walker.rs
tools/benchmark/: Cargo.toml
tools/benchmark/src/: main.rs
(+713 files in other folders)
