[package]
name = "glua_check"
version = "0.1.5"
edition = "2024"
authors = ["Pollux12", "CppCXY"]
description = "Command-line diagnostics runner for Garry's Mod Lua (GLua)."
license = "MIT"
repository = "https://github.com/Pollux12/gmod-glua-ls"
readme = "README.md"
keywords = ["gmod", "glua", "lua", "cli"]
categories = ["development-tools"]

[dependencies]
# local
glua_code_analysis.workspace = true
glua_parser.workspace = true

# external
serde.workspace = true
serde_json.workspace = true
lsp_types.workspace = true
log.workspace = true
fern.workspace = true
rowan.workspace = true
walkdir.workspace = true
tokio-util.workspace = true
ansi_term.workspace = true
tokio.workspace = true

[dependencies.clap]
workspace = true
optional = true

[dependencies.mimalloc]
workspace = true
optional = true

[[bin]]
name = "glua_check"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:mimalloc"]
