[package]
name = "glua_code_analysis"
version = "0.1.5"
edition = "2024"
authors = ["Pollux12", "CppCXY"]
description = "Static analysis engine for Garry's Mod Lua tooling."
license = "MIT"
repository = "https://github.com/Pollux12/gmod-glua-ls"
readme = "README.md"
keywords = ["gmod", "glua", "lua", "analysis"]
categories = ["development-tools"]
include = [
    "Cargo.toml",
    "src/**",
    "resources/**",
]
[dev-dependencies]
googletest.workspace = true

# Inherit workspace lints configuration
[lints]
workspace = true

[dependencies]
# local
glua_parser.workspace = true
glua_diagnostic_macro.workspace = true

# external
serde.workspace = true
serde_json.workspace = true
lsp_types.workspace = true
schemars.workspace = true
rowan.workspace = true
regex.workspace = true
internment.workspace = true
log.workspace = true
tokio-util.workspace = true
rust-i18n.workspace = true
walkdir.workspace = true
dirs.workspace = true
wax.workspace = true
percent-encoding.workspace = true
flagset.workspace = true
encoding_rs.workspace = true
url.workspace = true
smol_str.workspace = true
serde_with.workspace = true
include_dir.workspace = true
glua_codestyle.workspace = true
itertools.workspace = true
luars.workspace = true
reqwest.workspace = true
schema_to_glua.workspace = true

[package.metadata.i18n]
available-locales = ["en", "zh_CN", "zh_HK"]
default-locale = "en"
