[package]
name = "glua_diagnostic_macro"
version = "0.5.0"
edition = "2024"
authors = ["Pollux12", "CppCXY"]
description = "Proc-macro crate for generating diagnostics in gmod-glua-ls."
license = "MIT"
repository = "https://github.com/Pollux12/gmod-glua-ls"
readme = "README.md"
keywords = ["gmod", "glua", "lua", "proc-macro"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
