[package]
name = "glua_doc_cli"
version = "0.1.5"
edition = "2024"
authors = ["Pollux12", "CppCXY"]
description = "Command-line documentation generator for GLua projects."
license = "MIT"
repository = "https://github.com/Pollux12/gmod-glua-ls"
readme = "README.md"
keywords = ["gmod", "glua", "lua", "cli"]
categories = ["development-tools"]
include = [
    "Cargo.toml",
    "src/**",
    "template/**",
]

[dependencies]
# local
glua_code_analysis.workspace = true
glua_parser.workspace = true

# external
serde.workspace = true
serde_json.workspace = true
lsp_types.workspace = true
rowan.workspace = true
walkdir.workspace = true
tera.workspace = true
include_dir.workspace = true
num-traits.workspace = true
log.workspace = true
fern.workspace = true

[dependencies.clap]
workspace = true
optional = true

[dependencies.mimalloc]
workspace = true
optional = true

[[bin]]
name = "glua_doc_cli"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:mimalloc"]
