[package]
name = "glua_ls"
version = "0.20.0"
edition = "2024"
authors = ["Pollux12", "CppCXY"]
description = "Language server for Garry's Mod Lua (GLua)."
license = "MIT"
repository = "https://github.com/Pollux12/gmod-glua-ls"
readme = "README.md"
keywords = ["gmod", "glua", "lua", "language-server"]
categories = ["development-tools"]

# Inherit workspace lints configuration
[lints]
workspace = true

[dependencies]
# local
glua_code_analysis.workspace = true
glua_parser.workspace = true
glua_parser_desc.workspace = true

# external
lsp-server.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
lsp_types.workspace = true
log.workspace = true
fern.workspace = true
chrono.workspace = true
notify.workspace = true
tokio-util.workspace = true
rowan.workspace = true
walkdir.workspace = true
rust-i18n.workspace = true
glob.workspace = true
serde_yml.workspace = true
itertools.workspace = true
dirs.workspace = true
wax.workspace = true
internment.workspace = true
include_dir.workspace = true

[dependencies.clap]
workspace = true
optional = true

[dependencies.mimalloc]
workspace = true
optional = true

[dev-dependencies]
googletest.workspace = true


[[bin]]
name = "glua_ls"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:mimalloc"]
