[package]
name = "glua_parser"
version = "0.23.0"
edition = "2024"
authors = ["Pollux12", "CppCXY"]
description = "Parser for Garry's Mod Lua, Lua 5.x, and LuaJIT source files."
license = "MIT"
repository = "https://github.com/Pollux12/gmod-glua-ls"
readme = "README.md"
keywords = ["gmod", "glua", "parser", "lua"]
categories = ["development-tools", "parsing"]

# Inherit workspace lints configuration
[lints]
workspace = true

[dependencies]
rowan.workspace = true
rust-i18n.workspace = true
serde.workspace = true

[package.metadata.i18n]
available-locales = ["en", "zh_CN", "zh_HK"]
default-locale = "en"
