[package]
name = "glua_parser"
version = "0.1.5"
edition = "2024"
authors = ["Pollux12", "CppCXY"]
description = "Parser for Garry's Mod Lua, Lua 5.x, and LuaJIT source files."
license = "MIT"
repository = "https://github.com/Pollux12/gmod-glua-ls"
readme = "README.md"
keywords = ["gmod", "glua", "parser", "lua"]
categories = ["development-tools", "parsing"]

# Inherit workspace lints configuration
[lints]
workspace = true

[dependencies]
rowan.workspace = true
serde.workspace = true

