[package]
name = "glua_parser_desc"
version = "0.23.0"
edition = "2024"
authors = ["Pollux12", "CppCXY", "taminomara"]
description = "A parser for markup within Lua comments"
license = "MIT"
repository = "https://github.com/Pollux12/gmod-glua-ls"
readme = "README.md"
keywords = ["gmod", "glua", "parser", "lua"]
categories = ["development-tools", "parsing"]

# Inherit workspace lints configuration
[lints]
workspace = true

[dependencies]
# local
glua_parser.workspace = true

# external
rowan.workspace = true
unicode-general-category.workspace = true

[dev-dependencies]
googletest.workspace = true
