[package]
name = "schema_to_glua"
version = "0.1.5"
edition = "2024"
authors = ["Pollux12", "CppCXY"]
description = "Tooling for converting JSON Schema into GLua annotations."
license = "MIT"
repository = "https://github.com/Pollux12/gmod-glua-ls"
readme = "README.md"
keywords = ["gmod", "glua", "lua", "schema"]
categories = ["development-tools"]

[dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
